--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "express-mysql-session": "^2.1.0",
+    "express-session": "^1.16.2",
+    "express-validator": "^6.0.1",
+    "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.8.6"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.8.6",
+    "timeago.js": "^4.0.0-beta.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -25,6 +34,7 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
     "prettier": "^1.17.1"
   }
 }
