--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "sass": "^1.22.0",
     "sequelize": "^5.8.6",
     "timeago.js": "^4.0.0-beta.2"
   },
